<resources>
    <string name="app_name">MathStudy</string>
    <string name="school_education">School Education</string>
    <string name="desc_education">The best app for studying math from your smart phone without any connection with internet</string>
    <string name="primary_school">Primary School</string>
    <string name="secondary_school">Secondary School</string>
    <string name="high_school">High School</string>
    <string name="desc_math">Study math and be helpful \nthe world is waiting for you</string>
    <string name="desc_physics">Without physics we wouldn\'t be \nable to have cars</string>
    <string name="desc_chemistry">The art of chemistry is \nnot just for biologic</string>

    <string name="dashboard_title">Dashboard App</string>
    <string name="dashboard_heading">Study math and be best scientist of Algeria</string>
    <string name="dashboard_sub_title">380 documents</string>

    <string-array name="level">
        <item>Primary School</item>
        <item>Secondary School</item>
        <item>High School</item>
    </string-array>

    <string-array name="primary_school">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
        <item>Fifth Year</item>
    </string-array>

    <string-array name="secondary_school">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>

    <string-array name="high_school">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
    </string-array>

    <!-- Strings for On Boarding Screen -->
    <!-- Titles -->
    <string name="first_slide_title">Math Solver Robot</string>
    <string name="second_slide_title">Math Quiz</string>
    <string name="third_slide_title">Documents For download</string>

    <!-- Description -->
    <string name="first_slide_desc">Here a robot that help solve all kind of math problems and equations.</string>
    <string name="second_slide_desc">There is a lot of math quiz and questions and equations to solve with reward system</string>
    <string name="third_slide_desc">In this part you can download lessons and exercices and exams and lot of things in format of pdf.</string>
    <!-- Buttons -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

</resources>
